Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/Tour_Program__c.object-meta.xml
<CustomObject>
    <label>Tour Program</label>
    <nameField>
        <label>Tour Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>