Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Architect_Meet_Target__c.field-meta.xml
<CustomField>
    <fullName>Architect_Meet_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Architects Meet (Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>