Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Architects_Meet_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Architects_Meet_Actuals__c</fullName>
    <label>Architects Meet (Actuals)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>