Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Dealers_Factory_Visit_Target__c.field-meta.xml
<CustomField>
    <fullName>Dealers_Factory_Visit_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dealers Factory Visit (Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>