Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Expenses_Approval__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Approval__c</fullName>
    <label>Expenses Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>