Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Expenses_Approved__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expenses Approved</label>
    <type>Checkbox</type>
</CustomField>