Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Group_ActivityTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_ActivityTarget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Group Activity(Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>