Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID__c</fullName>
    <formula>Owner:User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager ID</label>
    <type>Text</type>
</CustomField>