Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/No_of_Days2__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days2__c</fullName>
    <formula>(To_Date__c  -  From_Date__c )+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days(not used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>