Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/No_of_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days__c</fullName>
    <label>No of days(not used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>