Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Out_Station_Visit_Days__c.field-meta.xml
<CustomField>
    <fullName>Out_Station_Visit_Days__c</fullName>
    <label>Out Station Visit Days</label>
    <summaryFilterItems>
        <field>Tour_Plan1__c.Visit_Type__c</field>
        <operation>equals</operation>
        <value>Out Station</value>
    </summaryFilterItems>
    <summaryForeignKey>Tour_Plan1__c.Tour_Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>