Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Plumber_Mechanic_Engineers_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Plumber_Mechanic_Engineers_Factory_Visit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plumber/Mechanic/EngineerFactory(Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>