Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Plumber_MechanicEngineers_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Plumber_MechanicEngineers_Factory_Visit__c</fullName>
    <label>Plumber/Mechanic/EngineerFactory(Actual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>