Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <formula>CreatedBy.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfileId</label>
    <type>Text</type>
</CustomField>