Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Promotion_Target_1__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Target_1__c</fullName>
    <label>Promotion Target 1(not used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architects Meet</fullName>
            </value>
            <value>
                <fullName>Boarers Meet</fullName>
            </value>
            <value>
                <fullName>Builders Meet</fullName>
            </value>
            <value>
                <fullName>Dealers Meet</fullName>
            </value>
            <value>
                <fullName>Engineers Meet</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Farmers Meet</fullName>
            </value>
            <value>
                <fullName>Jeep Campaign</fullName>
            </value>
            <value>
                <fullName>Mechanic Meet</fullName>
            </value>
            <value>
                <fullName>Plumber Meet</fullName>
            </value>
            <value>
                <fullName>Shandy Show</fullName>
            </value>
            <value>
                <fullName>Tractor Show</fullName>
            </value>
            <value>
                <fullName>Dealers Salesman Meet</fullName>
            </value>
            <value>
                <fullName>Mini Meet</fullName>
            </value>
            <value>
                <fullName>Dealers Factory Visit</fullName>
            </value>
            <value>
                <fullName>Plumber/Mechanic/Engineers Factory Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>