Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Shandy_Show_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Shandy_Show_Actuals__c</fullName>
    <label>Shandy Show (Actuals)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>