Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Tour_Program_Approved__c.field-meta.xml
<CustomField>
    <fullName>Tour_Program_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tour Program Approved</label>
    <type>Checkbox</type>
</CustomField>