Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/Unique_Tour_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Tour_Program_Name__c</fullName>
    <label>Unique Tour Program Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>