Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/fields/User_State__c.field-meta.xml
<CustomField>
    <fullName>User_State__c</fullName>
    <formula>Owner:User.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User State</label>
    <type>Text</type>
</CustomField>