Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/validationRules/Edit_Promotions_Target_After_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Promotions_Target_After_Approval</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
 Tour_Program_Approved__c,
ISCHANGED(Name),
 $Profile.Id == &apos;00e30000001yGyh&apos;
)</errorConditionFormula>
    <errorMessage>Insufficient Privileges to edit after Approval...!!!</errorMessage>
</ValidationRule>