Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/validationRules/february.validationRule-meta.xml
<ValidationRule>
    <fullName>february</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
               OR(
                     MONTH(From_Date__c)== 2
                    
               ),
              DAY(From_Date__c)==16, DAY(To_Date__c) &lt;&gt; 28 ,
              DAY(To_Date__c)&lt;&gt;29
          )</errorConditionFormula>
    <errorMessage>From Date and To Date should be 15 Days...!!!</errorMessage>
</ValidationRule>