Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/validationRules/From_date_can_only_1st_or_16th.validationRule-meta.xml
<ValidationRule>
    <fullName>From_date_can_only_1st_or_16th</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      DAY(From_Date__c) &lt;&gt; 1,
      DAY(From_Date__c) &lt;&gt; 16
     )</errorConditionFormula>
    <errorMessage>From Date can only be (1st or 16th)</errorMessage>
</ValidationRule>