Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/validationRules/Tour_program_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Tour_program_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>(To_Date__c - From_Date__c)&lt;=11</errorConditionFormula>
    <errorMessage>Duration to be for 15 days..!!</errorMessage>
</ValidationRule>