Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/validationRules/Tour_program_Duration_Greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Tour_program_Duration_Greater</fullName>
    <active>true</active>
    <errorConditionFormula>(To_Date__c - From_Date__c)&gt; 16</errorConditionFormula>
    <errorDisplayField>Architects_Meet_Actuals__c</errorDisplayField>
    <errorMessage>Duration to be for 15 days..!!</errorMessage>
</ValidationRule>