Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/listViews/Last_Month_Expenses_Approved.listView-meta.xml
<ListView>
    <fullName>Last_Month_Expenses_Approved</fullName>
    <columns>NAME</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Expenses_Approval__c</columns>
    <columns>Expenses_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expenses_Approval__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2014 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>3/31/2014 12:00 AM</value>
    </filters>
    <label>Last Month-Expenses Approved</label>
</ListView>