Partial_14Dec2021/force-app/main/default/objects/Tour_Program__c/listViews/My_Tour_Program.listView-meta.xml
<ListView>
    <fullName>My_Tour_Program</fullName>
    <columns>NAME</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Tour_Program_Approved__c</columns>
    <columns>Expenses_Approved__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tour Program</label>
</ListView>